--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],
-      "contentlayer/generated": ["./.contentlayer/generated"]
+      "contentlayer/generated": ["./.contentlayer/generated"],
+      "@/contentlayer/generated/*": ["./.contentlayer/generated/*"]
     }
   },
   "include": [
