--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rehype-autolink-headings": "^7.0.0",
     "rehype-highlight": "^7.0.0",
     "rehype-pretty-code": "^0.10.1",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.0",
     "shiki": "^0.14.5",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
