--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
     "react-dom": "18.2.0",
     "rehype-autolink-headings": "^7.0.0",
     "rehype-highlight": "^7.0.0",
+    "rehype-katex": "^7.0.0",
     "rehype-pretty-code": "^0.10.1",
     "rehype-slug": "^6.0.0",
+    "remark": "^15.0.1",
+    "remark-math": "^5.1.1",
     "remark-gfm": "^4.0.0",
     "shiki": "^0.14.5",
     "tailwind-merge": "^1.14.0",
