--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "rehype-pretty-code": "^0.10.1",
     "rehype-slug": "^6.0.0",
     "remark": "^15.0.1",
+    "remark-gfm": "3.0.1",
     "remark-math": "^5.1.1",
-    "remark-gfm": "^4.0.0",
     "shiki": "^0.14.5",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
